HTML Pronto / CSS Iniciando Agora

--- a/Desafio_Instagram LandingPage - Gabriela Pinheiro/index.html
+++ b/Desafio_Instagram LandingPage - Gabriela Pinheiro/index.html
@@ -1,21 +1,49 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="/CSS/style.css">
 </head>
-<body>
-    <header><h1>testehtml</h1></header>
-    <section>
-        <header><h2>teste section</h2></header>
-        <article>
-            <header><h3>teste article</h3></header>
-            <p>teste</p>
-        </article>
-    </section>
 
-    
+<body>
+    <div class="ig_wrapper">
+        <div class="ig_phones">
+            <img src="/Desafio_Instagram LandingPage - Gabriela Pinheiro/IMG/instagram-celular.png"
+                alt="Imagem de celular">
+
+
+        </div>
+        <div class="ig_login">
+            <div class="group">
+                <img src="/Desafio_Instagram LandingPage - Gabriela Pinheiro/IMG/instagram-logo.png" alt="Logo do Ig">
+                <div class="profile_foto">
+                    <img src="/Desafio_Instagram LandingPage - Gabriela Pinheiro/IMG/perfil-instagram.jpg"
+                        alt="foto do perfil">
+                </div>
+                <a href="#" class="login"></a>
+                <a href="#" class="logout"></a>
+            </div>
+            <div class="group">
+                <p class="not-account">Não é você</p>
+                <p class="notacount">
+                    <span class="linkblue">Alternar contas</span>
+                    ou
+                    <span class="linkblue">Inscrever-se</span>
+                </p>
+            </div>
+            <div class="gettheapp">
+                <p class="getapp">Get the App</p>
+                <div class="download">
+                    <a href="#">App Download</a>
+                    <a href="#">App Download</a>
+                </div>
+            </div>
+
+        </div>
+    </div>
 </body>
+
 </html>
