fim do layout basico. Deifnindo media queries.

--- a/Desafio_Instagram LandingPage - Gabriela Pinheiro/index.html
+++ b/Desafio_Instagram LandingPage - Gabriela Pinheiro/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/CSS/style.css">
+    <link rel="stylesheet" href="/Desafio_Instagram LandingPage - Gabriela Pinheiro/CSS/style.css">
 </head>
 
 <body>
@@ -23,22 +23,24 @@
                     <img src="/Desafio_Instagram LandingPage - Gabriela Pinheiro/IMG/perfil-instagram.jpg"
                         alt="foto do perfil">
                 </div>
-                <a href="#" class="login"></a>
-                <a href="#" class="logout"></a>
+                <a href="#" class="login">Continue como Pedrozaeu</a>
+                <a href="#" class="logout">Remover conta</a>
             </div>
             <div class="group">
                 <p class="not-account">Não é você</p>
-                <p class="notacount">
+                <p class="not-acount">
                     <span class="linkblue">Alternar contas</span>
                     ou
                     <span class="linkblue">Inscrever-se</span>
                 </p>
             </div>
             <div class="gettheapp">
-                <p class="getapp">Get the App</p>
+                <p class="getapp">Baixe o aplicativo</p>
                 <div class="download">
-                    <a href="#">App Download</a>
-                    <a href="#">App Download</a>
+                    <a href="#" class="appdownload
+                    "></a>
+                    <a href="#" class="appdownload
+                    "></a>
                 </div>
             </div>
 
