Correção da pasta das Imagens

--- a/Desafio_Instagram LandingPage - Gabriela Pinheiro/index.html
+++ b/Desafio_Instagram LandingPage - Gabriela Pinheiro/index.html
@@ -5,22 +5,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/Desafio_Instagram LandingPage - Gabriela Pinheiro/CSS/style.css">
+    <link rel="stylesheet" href="CSS/style.css">
 </head>
 
 <body>
     <div class="ig_wrapper">
         <div class="ig_phones">
-            <img src="/Desafio_Instagram LandingPage - Gabriela Pinheiro/IMG/instagram-celular.png"
+            <img src="IMG/instagram-celular.png"
                 alt="Imagem de celular">
 
 
         </div>
         <div class="ig_login">
             <div class="group">
-                <img src="/Desafio_Instagram LandingPage - Gabriela Pinheiro/IMG/instagram-logo.png" alt="Logo do Ig">
+                <img src="IMG/instagram-logo.png" alt="Logo do Ig">
                 <div class="profile_foto">
-                    <img src="/Desafio_Instagram LandingPage - Gabriela Pinheiro/IMG/perfil-instagram.jpg"
+                    <img src="IMG/perfil-instagram.jpg"
                         alt="foto do perfil">
                 </div>
                 <a href="#" class="login">Continue como Pedrozaeu</a>
