revisão em tags de posição

--- a/CloneInstagram/index.html
+++ b/CloneInstagram/index.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Instagram Clone</title>
     <link rel="stylesheet" href="CSS/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -27,12 +28,12 @@
                 <a href="#" class="logout">Remover conta</a>
             </div>
             <div class="group">
-                <p class="not-account">Não é você</p>
-                <p class="not-acount">
-                    <span class="linkblue">Alternar contas</span>
+                <a class="not-account">Não é você?</a>
+                <a class="not-account">
+                    <p><span class="linkblue">Alternar contas</span>
                     ou
-                    <span class="linkblue">Inscrever-se</span>
-                </p>
+                    <span class="linkblue">Inscrever-se</span></p>
+                </a>
             </div>
             <div class="gettheapp">
                 <p class="getapp">Baixe o aplicativo</p>
