ajuste da div appdowload

--- a/CloneInstagram/index.html
+++ b/CloneInstagram/index.html
@@ -30,9 +30,9 @@
             <div class="group">
                 <a class="not-account">Não é você?</a>
                 <a class="not-account">
-                    <p><span class="linkblue">Alternar contas</span>
+                    <p><a href="#"><span class="linkblue">Alternar contas</span></a>
                     ou
-                    <span class="linkblue">Inscrever-se</span></p>
+                    <a href="#"><span class="linkblue">Inscrever-se</span></a></p>
                 </a>
             </div>
             <div class="gettheapp">
