--- a/CloneNetflix/index.html
+++ b/CloneNetflix/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NetflixClone</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="js/script.js">
+    <link rel="scriptsheet" href="js/script.js">
 </head>
 <body>
     
