--- a/CloneNetflix/index.html
+++ b/CloneNetflix/index.html
@@ -1,13 +1,32 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>NetflixClone</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="scriptsheet" href="js/script.js">
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="scriptsheet" href="js/script.js" />
+  </head>
+  <body>
+    <header>
+      <div class="container">
+        <div class="logo"><h2>Rafflix</h2></div>
+        <nav>
+          <a href="#">Inicio</a>
+          <a href="#">Séries</a>
+          <a href="#">Filmes</a>
+          <a href="#">Documentários</a>
+          <a href="#">Animes</a>
+        </nav>
+      </div>
+    </header>
+    <main>
+        <div class="filme-pricipal">
+            <div class="container">
+                <h3 class="titulo">HOUSE OF CARDS</h3>
+                <p></p>
+            </div>
+        </div>
+    </main>
+  </body>
 </html>
