adicionado fontawesome, hover nos links

--- a/CloneNetflix/index.html
+++ b/CloneNetflix/index.html
@@ -6,11 +6,13 @@
     <title>NetflixClone</title>
     <link rel="stylesheet" href="css/style.css" />
     <link rel="scriptsheet" href="js/script.js" />
+    <script src="https://kit.fontawesome.com/ea3f74247c.js" crossorigin="anonymous"></script>
+
   </head>
   <body>
     <header>
       <div class="container">
-        <div class="logo"><h2>Rafflix</h2></div>
+        <div class="logo"><h2>Gameflix</h2></div>
         <nav>
           <a href="#">Inicio</a>
           <a href="#">Séries</a>
@@ -21,12 +23,29 @@
       </div>
     </header>
     <main>
-        <div class="filme-pricipal">
-            <div class="container">
-                <h3 class="titulo">HOUSE OF CARDS</h3>
-                <p></p>
-            </div>
+      <div class="game-pricipal">
+        <div class="container">
+          <h3 class="titulo">Super Mario World</h3>
+          <p class="descricao">
+            Super Mario World é um plataforma de salto e fuga e uma continuação
+            de Super Mario Bros. 3. O jogo mantém muitos dos elementos que
+            estrearam em Super Mario Bros. 3, como o mapa-múndi e as lutas do
+            chefe do Koopaling, enquanto introduz uma grande variedade de novas
+            mecânicas de jogabilidade, como um mapa mundial expandido e menos
+            linear e a capacidade de salvar o jogo. Grande parte dos personagens
+            introduzidos do jogo, mecânicas de jogo e temas artísticos
+            influenciaram títulos posteriores na série Mario. O jogo foi lançado
+            para o status de best-seller no SNES, recebeu grandes quantidades de
+            aclamação da crítica, e é comumente visto nos melhores jogos da
+            Nintendo de todos os tempos em várias listas de críticos.
+          </p>
+          <div class="botoes">
+          <button role="button" class="botao">Download <i class="fas fa-download"></i></button>
+          <button role="button" class="botao">Mais Detalhes <i class="fas fa-info-circle"></i></button>
+          </div>
         </div>
+        </div>        
+      </div>
     </main>
   </body>
 </html>
