--- a/CloneNetflix/index.html
+++ b/CloneNetflix/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>NetflixClone</title>
+    <title>Gameflix</title>
     <link rel="stylesheet" href="css/style.css" />
     <link rel="scriptsheet" href="js/script.js" />
     <script src="https://kit.fontawesome.com/ea3f74247c.js" crossorigin="anonymous"></script>
